--- a/src/app/components/shared/footer/footer.component.html
+++ b/src/app/components/shared/footer/footer.component.html
@@ -1,1 +1,21 @@
-<p>footer works!</p>
+<footer *ngIf="authService.isLoggedIn" class="bg-dark pb-2 pt-4">
+  <div class="container">
+      <div class="row">
+          <div class="col-sm-6 my-auto text-center">
+            <img src="../../../../assets/logo-white.png" class="img-fluid w-25" alt="glenn.js logo">
+            <p><small class="text-white">&copy; By Glenn Marcano</small></p>
+          </div>
+          <div class="col-sm-4 text-center">
+              <a href="https://github.com/glenn-dev" target="_blank">
+                  <i class="mx-3 fab fa-github-square text-white fa-3x"></i>
+              </a>
+              <a href="https://www.linkedin.com/in/glenn-marcano-b59b7414b/" target="_blank">
+                  <i class="mx-3 fab fa-linkedin text-white fa-3x"></i>
+              </a>
+              <a href="https://twitter.com/glennScript" target="_blank">
+                  <i class="mx-3 fab fa-twitter-square text-white fa-3x"></i>
+              </a>
+          </div>
+      </div>
+  </div>
+</footer>
