--- a/src/app/components/users/users.component.html
+++ b/src/app/components/users/users.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-12 p-0">
-      <table class="table table-striped table-dark">
+      <table class="table table-striped table-dark mb-0">
         <thead>
           <tr>
             <th class="text-center" scope="col"><i class="fas fa-camera"></i></th>
