--- a/src/app/components/shared/footer/footer.component.html
+++ b/src/app/components/shared/footer/footer.component.html
@@ -1,21 +1,25 @@
 <footer *ngIf="authService.isLoggedIn" class="bg-dark pb-2 pt-4">
   <div class="container">
-      <div class="row">
-          <div class="col-sm-6 my-auto text-center">
-            <img src="../../../../assets/logo-white.png" class="img-fluid w-25" alt="glenn.js logo">
-            <p><small class="text-white">&copy; By Glenn Marcano</small></p>
-          </div>
-          <div class="col-sm-4 text-center">
-              <a href="https://github.com/glenn-dev" target="_blank">
-                  <i class="mx-3 fab fa-github-square text-white fa-3x"></i>
-              </a>
-              <a href="https://www.linkedin.com/in/glenn-marcano-b59b7414b/" target="_blank">
-                  <i class="mx-3 fab fa-linkedin text-white fa-3x"></i>
-              </a>
-              <a href="https://twitter.com/glennScript" target="_blank">
-                  <i class="mx-3 fab fa-twitter-square text-white fa-3x"></i>
-              </a>
-          </div>
+    <div class="row">
+      <div class="col-sm-6 my-auto text-center">
+        <img src="../../../../assets/logo-white.png" class="img-fluid w-50" alt="glenn.js logo">
       </div>
+      <div class="col-sm-4 text-center">
+        <a href="https://github.com/glenn-dev" target="_blank">
+          <i class="mx-3 fab fa-github-square text-white fa-2x"></i>
+        </a>
+        <a href="https://www.linkedin.com/in/glenn-marcano-b59b7414b/" target="_blank">
+          <i class="mx-3 fab fa-linkedin text-white fa-2x"></i>
+        </a>
+        <a href="https://twitter.com/glennScript" target="_blank">
+          <i class="mx-3 fab fa-twitter-square text-white fa-2x"></i>
+        </a>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <p class="text-white text-center"><small>&copy; By Glenn Marcano</small></p>
+      </div>
+    </div>
   </div>
 </footer>
