--- a/src/app/components/auth/forgot-password/forgot-password.component.html
+++ b/src/app/components/auth/forgot-password/forgot-password.component.html
@@ -1,22 +1,22 @@
 <div class="displayTable">
   <div class="displayTableCell">
     <div class="authBlock">
-      <h3>Reset Password</h3>
+      <h3>Recuperar contraseña</h3>
 
-      <p class="text-center">Please enter your email address to request a password reset.</p>
+      <p class="text-center">Por favor ingresa tu correo para solicitar un cambio de contraseña.</p>
 
       <div class="formGroup">
-        <input type="email" class="formControl" placeholder="Email Address" #passwordResetEmail required>
+        <input type="email" class="formControl" placeholder="Email" #passwordResetEmail required>
       </div>
 
       <!-- Calling ForgotPassword from AuthService Api -->
       <div class="formGroup">
-        <input type="submit" class="btn btnPrimary" value="Reset Password" (click)="authService.ForgotPassword(passwordResetEmail.value)">
+        <input type="submit" class="btn btnPrimary" value="Recuperar contraseña" (click)="authService.ForgotPassword(passwordResetEmail.value)">
       </div>
     </div>
 
     <div class="redirectToLogin">
-      <span>Go back to ? <span class="redirect" routerLink="/sign-in">Log In</span></span>
+      <span>Volver a <span class="redirect" routerLink="/sign-in">Iniciar sesión</span></span>
     </div>
 
   </div>
