Responsiveness fixed, lang fixed

--- a/src/app/components/auth/forgot-password/forgot-password.component.html
+++ b/src/app/components/auth/forgot-password/forgot-password.component.html
@@ -1,9 +1,9 @@
 <div class="displayTable">
   <div class="displayTableCell">
     <div class="authBlock">
-      <h3>Recuperar contraseña</h3>
+      <h3>Reset password</h3>
 
-      <p class="text-center">Por favor ingresa tu correo para solicitar un cambio de contraseña.</p>
+      <p class="text-center">Please enter your email to reset password.</p>
 
       <div class="formGroup">
         <input type="email" class="formControl" placeholder="Email" #passwordResetEmail required>
@@ -11,12 +11,12 @@
 
       <!-- Calling ForgotPassword from AuthService Api -->
       <div class="formGroup">
-        <input type="submit" class="btn btnPrimary" value="Recuperar contraseña" (click)="authService.ForgotPassword(passwordResetEmail.value)">
+        <input type="submit" class="btn btnPrimary" value="Reset password" (click)="authService.ForgotPassword(passwordResetEmail.value)">
       </div>
     </div>
 
     <div class="redirectToLogin">
-      <span>Volver a <span class="redirect" routerLink="/sign-in">Iniciar sesión</span></span>
+      <span>Back to <span class="redirect" routerLink="/sign-in">Sign In</span></span>
     </div>
 
   </div>
