--- a/src/app/components/auth/sign-in/sign-in.component.html
+++ b/src/app/components/auth/sign-in/sign-in.component.html
@@ -4,7 +4,7 @@
     <div class="authBlock">
       <h3>Sign In</h3>
       <div class="formGroup">
-        <input type="text" class="formControl" placeholder="Username" #userName required>
+        <input type="text" class="formControl" placeholder="Email" #userName required>
       </div>
 
       <div class="formGroup">
