--- a/src/app/components/users/users.component.html
+++ b/src/app/components/users/users.component.html
@@ -4,12 +4,12 @@
       <table class="table table-striped table-dark mb-0">
         <thead>
           <tr>
-            <th class="text-center d-none d-md-block" scope="col"><i class="fas fa-camera"></i></th>
+            <th class="text-center d-none d-md-table-cell" scope="col"><i class="fas fa-camera"></i></th>
             <th class="text-center" scope="col">Nombre</th>
             <th class="text-center" scope="col">Apellido</th>
             <th class="text-center" scope="col">Edad</th>
             <th class="text-center" scope="col">Genero</th>
-            <th class="text-center d-none d-md-block" scope="col">Ubicación</th>
+            <th class="text-center d-none d-md-table-cell" scope="col">Ubicación</th>
           </tr>
         </thead>
         <tbody>
@@ -23,13 +23,13 @@
             (click)="showUser(user);"
             data-toggle="modal" 
             data-target="#userDetailModal">
-            <td class="text-center d-none d-md-block"><img src="{{user.picture.thumbnail}}" class="img-fluid img-thumbnail" alt="{{user.name.title}} {{user.name.first}}"></td>
+            <td class="text-center d-none d-md-table-cell"><img src="{{user.picture.thumbnail}}" class="img-fluid img-thumbnail" alt="{{user.name.title}} {{user.name.first}}"></td>
             <td class="align-middle">{{user.name.first}}</td>
             <td class="align-middle">{{user.name.last}}</td>
             <td class="align-middle">{{user.dob.age}}</td>
             <td class="align-middle" *ngIf="user.gender  == 'female'"><i class="fas fa-venus"></i></td>
             <td class="align-middle" *ngIf="user.gender == 'male'"><i class="fas fa-mars"></i></td>
-            <td class="align-middle d-none d-md-block">{{user.location.city}}, {{user.location.country}}</td>
+            <td class="align-middle d-none d-md-table-cell">{{user.location.city}}, {{user.location.country}}</td>
           </tr>
         </tbody>
       </table>
